k8s/namespaces/base/security-system/crowdsec/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crowdsec
  namespace: security-system
spec:
  hosts:
    - 'metabase.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 3000
            host: crowdsec-service.network-system.svc.cluster.local
          weight: 100
